# multi-agent-clinical-decision-support

./: .env.example  .gitignore  LICENSE  README.md  SUBMISSION_CHECKLIST.md  app.py  data_dictionary.md  evaluation_report.md  prompt_engineering_portfolio.md  pyproject.toml
data/simulated/: alerts.json  anamnesis_records.json  dataset_manifest.json  ehr_records.json  rpm_readings.csv  scenarios.json
docs/: agent_level_test_results.md  application_design.md  architecture.mmd  data_dictionary.md  demonstration_guide.md  ethics_and_limitations.md  evaluation_report.md  evaluation_report_generated.md  evaluation_report_generated_live_v1.md  evaluation_report_generated_live_v2.md  evaluation_report_generated_live_v3.md  evaluation_report_generated_live_v4.md  evaluation_report_generated_offline_v3.md  evaluation_report_generated_offline_v4.md  memory_tools_and_safety.md  model_selection.md  project_report.md  prompt_engineering_portfolio.md  references.md
evaluation/: evaluate.py  prompt_quality.py
evaluation/results/: live_smoke_scenario_01.json  live_smoke_scenario_01_guarded.json  live_v1_evaluation.json  live_v2_evaluation.json  live_v3_evaluation.json  live_v4_evaluation.json  offline_evaluation.json  offline_v3_evaluation.json  offline_v4_evaluation.json  (+1 more)
notebooks/: clinicalbridge_demo.ipynb
output/: scenario_03.md  scenario_06.md
scripts/: generate_dataset.py  generate_demo_notebook.py  generate_docs_pdf.py  generate_report_pdf.py
tests/: test_dataset.py  test_retrieval.py  test_safety_and_triage.py  test_streamlit_app.py  test_workflow.py
(+80 files in other folders)
